💄(ashley) fix heading button rendering in ashley editor on firefox
On firefox, the heading buttons (H1/H2/H3) were displayed on two
lines.

--- a/src/frontend/scss/_main.scss
+++ b/src/frontend/scss/_main.scss
@@ -19,3 +19,7 @@
   padding: 1em;
   min-height: 10em;
 }
+
+.ashley-editor-buttons button {
+  width: 40px;
+}
